compiler/src/test/resources/golden/errors/type_order_non_ordered.dawn
fn f() -> Bool = true < false
