compiler/src/test/resources/golden/errors/type_order_non_ordered.err
error: values of type Bool cannot be ordered
  --> type_order_non_ordered.dawn:1:23
  |
1 | fn f() -> Bool = true < false
  |                       ^
